# agentic-task-executor

./: .env.example  .gitignore  .golangci.yml  .markdownlint.json  .pre-commit-config.yaml  AGENTIC_SDLC_AUDIT.md  AGENTIC_SDLC_AUDIT_COMPLETE.md  AI_AGENTIC_SDLC_AUDIT_REPORT.md  AI_AGENTIC_SDLC_READINESS_AUDIT.md  AUDIT_VERIFICATION.md  CI_FIX_SUMMARY.md  CLAUDE.md  Dockerfile  FINAL_AUDIT_REPORT.md  IMPLEMENTATION_SUMMARY.md  Makefile  NEW_FILES.md  README.md  docker-compose.yml  go.mod  go.sum  pyproject.toml  requirements.txt  test_setup.py  validate_audit.sh  verify-implementation.sh
.claude/: settings.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dependency-review.yml  pre-commit.yml  release.yml
cmd/api/: main.go
cmd/worker/: main.go
docs/: ARCHITECTURE.md  GETTING_STARTED.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md
internal/activities/: agent_runtime.go  git_operations.go  github_operations.go  tool_executor.go
internal/agent/: client.go  prompts.go  tools.go
internal/api/: handler.go  models.go  server.go
internal/config/: config.go
internal/models/: agent.go  git.go  github.go  workflow.go
internal/workflows/: helpers.go  task_workflow.go
src/: __init__.py  config.py  worker.py
src/activities/: README.md  __init__.py  agent_runtime.py  git_operations.py  github_operations.py
src/agent/: __init__.py  claude_client.py  prompts.py  tools.py
src/api/: __init__.py  models.py  routes.py
src/workflows/: __init__.py  (+1 more)
